examples/test/testpolicy6948.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6948
  namespace: namespace304
spec:
  podSelector:
    matchLabels:
      key16: value7
      key35: value29
      key12: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value6
          key18: value2
      podSelector:
        matchLabels:
          key9: value42
          key35: value3
          key48: value20
